--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "appwrite": "^14.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "node-appwrite": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
